--- a/OnlineTutor2/Views/Shared/_Layout.cshtml
+++ b/OnlineTutor2/Views/Shared/_Layout.cshtml
@@ -182,9 +182,9 @@
             <div class="row">
 
                 <div class="col-md-4 footer-column">
-                    <h6><i class="fas fa-graduation-cap text-primary"></i> OnlineTutor2</h6>
+                    <h6><i class="fas fa-graduation-cap text-primary"></i> Образовательный портал</h6>
                     <p>&copy; 2025 - Система онлайн-обучения</p>
-                    <p>Эффективная подготовка к ЕГЭ</p>
+                    <p>Эффективная подготовка к ЕГЭ по русскому языку</p>
                     <p>
                         <a asp-area="" asp-controller="Home" asp-action="Privacy"><br />
                             <i class="fas fa-shield-alt"></i> Конфиденциальность
