--- a/OnlineTutor2/Views/Shared/Components/UserInfo/Default.cshtml
+++ b/OnlineTutor2/Views/Shared/Components/UserInfo/Default.cshtml
@@ -6,7 +6,7 @@
         <a class="nav-link dropdown-toggle text-dark d-flex align-items-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fas fa-user-circle me-1"></i>
             <span class="d-none d-sm-inline">
-                Привет, @Model.FullName!
+                @Model.FullName
             </span>
             <span class="d-sm-none">Профиль</span>
         </a>
