--- a/OnlineTutor2/Views/StudentManagement/Create.cshtml
+++ b/OnlineTutor2/Views/StudentManagement/Create.cshtml
@@ -95,7 +95,7 @@
                             </div>
                             <div class="col-md-4 mb-3">
                                 <label asp-for="Grade" class="form-label">
-                                    <i class="fas fa-layer-group"></i> Класс в школе
+                                    <i class="fas fa-layer-group"></i> Класс
                                 </label>
                                 <select asp-for="Grade" class="form-select">
                                     <option value="">Не указан</option>
