--- a/OnlineTutor2/Views/StudentManagement/Index.cshtml
+++ b/OnlineTutor2/Views/StudentManagement/Index.cshtml
@@ -7,13 +7,13 @@
     <h2><i class="fas fa-user-graduate text-primary"></i> Управление учениками</h2>
     <div class="btn-group" role="group">
         <a asp-action="Import" class="btn btn-info">
-            <i class="fas fa-file-excel"></i> Импорт из Excel
+            <i class="fas fa-file-excel"></i> Импорт
         </a>
         <a asp-action="AddExisting" class="btn btn-outline-success">
-            <i class="fas fa-user-plus"></i> Добавить существующего
+            <i class="fas fa-user-plus"></i> Добавить
         </a>
         <a asp-action="Create" class="btn btn-success">
-            <i class="fas fa-plus"></i> Создать нового
+            <i class="fas fa-plus"></i> Создать
         </a>
     </div>
 </div>
