--- a/OnlineTutor2/Views/Class/Index.cshtml
+++ b/OnlineTutor2/Views/Class/Index.cshtml
@@ -109,3 +109,12 @@ else
         }
     </div>
 }
+
+@section Styles {
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+}
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+    <script src="~/js/layout.js" asp-append-version="true"></script>
+}
