--- a/OnlineTutor2/Views/Shared/_Layout.cshtml
+++ b/OnlineTutor2/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             {
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-controller="Teacher" asp-action="Index">
-                                        <i class="fas fa-chalkboard-teacher"></i> Кабинет учителя
+                                        <i class="fas fa-chalkboard-teacher"></i> Учительская
                                     </a>
                                 </li>
                                 <li class="nav-item dropdown">
@@ -69,7 +69,7 @@
                             {
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-controller="Student" asp-action="Index">
-                                        <i class="fas fa-user-graduate"></i> Кабинет ученика
+                                        <i class="fas fa-user-graduate"></i> Класс
                                     </a>
                                 </li>
                                 <li class="nav-item dropdown">
