--- a/OnlineTutor2/Views/StudentManagement/Create.cshtml
+++ b/OnlineTutor2/Views/StudentManagement/Create.cshtml
@@ -163,6 +163,7 @@
     <partial name="_ValidationScriptsPartial" />
     <script src="~/js/password-toggle.js" asp-append-version="true"></script>
     <script src="~/js/registration.js" asp-append-version="true"></script>
+    <script src="~/js/layout.js" asp-append-version="true"></script>
 
     <script>
         $(document).ready(function() {
