fix js remove alerts

--- a/OnlineTutor2/Views/StudentManagement/ImportResult.cshtml
+++ b/OnlineTutor2/Views/StudentManagement/ImportResult.cshtml
@@ -206,6 +206,7 @@
 </div>
 
 @section Scripts {
+    <script src="~/js/layout.js" asp-append-version="true"></script>
     <script>
         function copyToClipboard(email, password) {
             const text = `Email: ${email}\nПароль: ${password}`;
