--- a/OnlineTutor2/Views/StudentManagement/Index.cshtml
+++ b/OnlineTutor2/Views/StudentManagement/Index.cshtml
@@ -274,6 +274,7 @@ else
 </div>
 
 @section Scripts {
+    <script src="~/js/layout.js" asp-append-version="true"></script>
     <script>
         function showAssignClassModal(studentId, studentName, currentClassId) {
             document.getElementById('modalStudentId').value = studentId;
