--- a/OnlineTutor2/Views/StudentManagement/AddExisting.cshtml
+++ b/OnlineTutor2/Views/StudentManagement/AddExisting.cshtml
@@ -189,6 +189,7 @@ else
 </div>
 
 @section Scripts {
+    <script src="~/js/layout.js" asp-append-version="true"></script>
     <script>
         function showAddToClassModal(userId, userName) {
             document.getElementById('modalUserId').value = userId;
