--- a/OnlineTutor2/Views/StudentManagement/Delete.cshtml
+++ b/OnlineTutor2/Views/StudentManagement/Delete.cshtml
@@ -154,6 +154,7 @@
 </div>
 
 @section Scripts {
+    <script src="~/js/layout.js" asp-append-version="true"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const confirmationText = document.getElementById('confirmationText');
