--- a/OnlineTutor2/Views/StudentManagement/Details.cshtml
+++ b/OnlineTutor2/Views/StudentManagement/Details.cshtml
@@ -362,6 +362,7 @@
 </div>
 
 @section Scripts {
+    <script src="~/js/layout.js" asp-append-version="true"></script>
     <script>
         function showAssignClassModal(studentId, studentName, currentClassId) {
             document.getElementById('modalStudentId').value = studentId;
