--- a/OnlineTutor2/Views/StudentManagement/Edit.cshtml
+++ b/OnlineTutor2/Views/StudentManagement/Edit.cshtml
@@ -143,4 +143,5 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script src="~/js/layout.js" asp-append-version="true"></script>
 }
