--- a/OnlineTutor2/Views/StudentManagement/ImportPreview.cshtml
+++ b/OnlineTutor2/Views/StudentManagement/ImportPreview.cshtml
@@ -157,7 +157,6 @@
     </div>
 }
 
-
 <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-4">
     <a asp-action="Import" class="btn btn-outline-secondary">
         <i class="fas fa-arrow-left"></i> Изменить файл
@@ -189,4 +188,8 @@
             <i class="fas fa-upload"></i> Загрузить файл
         </a>
     </div>
+}
+
+@section Scripts {
+    <script src="~/js/layout.js" asp-append-version="true"></script>
 }
