--- a/OnlineTutor2/Views/Student/Index.cshtml
+++ b/OnlineTutor2/Views/Student/Index.cshtml
@@ -2,39 +2,51 @@
     ViewData["Title"] = "Кабинет ученика";
 }
 
-<h2>Кабинет ученика</h2>
-
 <div class="row">
-    <div class="col-md-4">
-        <div class="card mb-4">
+    <div class="col-md-4 mb-4">
+        <div class="card card-fixed-height">
             <div class="card-header">
-                <h5 class="card-title">Мои задания</h5>
+                <h5 class="card-title">
+                    <i class="fas fa-tasks text-primary"></i> Тесты
+                </h5>
             </div>
-            <div class="card-body">
-                <p class="card-text">Здесь будут отображаться ваши текущие задания и тесты.</p>
-                <a href="#" class="btn btn-primary">Перейти к заданиям</a>
+            <div class="card-body d-flex flex-column">
+                <p class="card-text">Проходите тесты на правописание и проверяйте свои знания</p>
+                <a asp-controller="StudentTest" asp-action="Index" class="btn btn-primary mt-auto w-100">
+                    <i class="fas fa-play"></i> Доступные тесты
+                </a>
             </div>
         </div>
     </div>
-    <div class="col-md-4">
-        <div class="card mb-4">
+
+    <div class="col-md-4 mb-4">
+        <div class="card card-fixed-height">
             <div class="card-header">
-                <h5 class="card-title">Мой прогресс</h5>
+                <h5 class="card-title">
+                    <i class="fas fa-history text-info"></i> Мой прогресс
+                </h5>
             </div>
-            <div class="card-body">
-                <p class="card-text">Отслеживайте свой прогресс подготовки к ЕГЭ.</p>
-                <a href="#" class="btn btn-primary">Просмотреть прогресс</a>
+            <div class="card-body d-flex flex-column">
+                <p class="card-text">Отслеживайте свой прогресс и результаты тестов</p>
+                <a asp-controller="StudentTest" asp-action="History" class="btn btn-info mt-auto w-100">
+                    <i class="fas fa-chart-line"></i> История результатов
+                </a>
             </div>
         </div>
     </div>
-    <div class="col-md-4">
-        <div class="card mb-4">
+
+    <div class="col-md-4 mb-4">
+        <div class="card card-fixed-height">
             <div class="card-header">
-                <h5 class="card-title">Электронный дневник</h5>
+                <h5 class="card-title">
+                    <i class="fas fa-book text-success"></i> Материалы
+                </h5>
             </div>
-            <div class="card-body">
-                <p class="card-text">Ваши оценки и комментарии учителя.</p>
-                <a href="#" class="btn btn-primary">Открыть дневник</a>
+            <div class="card-body d-flex flex-column">
+                <p class="card-text">Изучайте учебные материалы и дополнительные ресурсы</p>
+                <a href="#" class="btn btn-success mt-auto w-100">
+                    <i class="fas fa-book-open"></i> Учебные материалы
+                </a>
             </div>
         </div>
     </div>
