--- a/OnlineTutor2/Views/Class/Index.cshtml
+++ b/OnlineTutor2/Views/Class/Index.cshtml
@@ -56,7 +56,11 @@ else
                                 </div>
                                 <div class="col">
                                     <div class="d-flex flex-column">
-                                        <span class="h5 text-info mb-0">@item.Tests.Count</span>
+                                        @{
+                                            var totalTestsCounts = ViewBag.TotalTestsCounts as Dictionary<int, int> ?? new Dictionary<int, int>();
+                                            var totalTestsCount = totalTestsCounts.ContainsKey(item.Id) ? totalTestsCounts[item.Id] : 0;
+                                        }
+                                        <span class="h5 text-info mb-0">@totalTestsCount</span>
                                         <small class="text-muted">тестов</small>
                                     </div>
                                 </div>
