--- a/OnlineTutor2/Views/Class/Details.cshtml
+++ b/OnlineTutor2/Views/Class/Details.cshtml
@@ -40,7 +40,7 @@
     <div class="card text-center">
         <div class="card-body">
             <i class="fas fa-tasks text-info" style="font-size: 2rem;"></i>
-            <h4 class="mt-2">@((ViewBag.AllTests as List<OnlineTutor2.ViewModels.ClassTestViewModel>)?.Count ?? 0)</h4>
+            <h4 class="mt-2">@(ViewBag.AllTestsCount ?? 0)</h4>
             <p class="text-muted mb-0">Тестов</p>
         </div>
     </div>
