fix remove alerts

--- a/OnlineTutor2/Views/SpellingTest/Create.cshtml
+++ b/OnlineTutor2/Views/SpellingTest/Create.cshtml
@@ -155,6 +155,7 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script src="~/js/layout.js" asp-append-version="true"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
