--- a/OnlineTutor2/Views/Account/Login.cshtml
+++ b/OnlineTutor2/Views/Account/Login.cshtml
@@ -58,6 +58,7 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
     <script src="~/js/password-toggle.js" asp-append-version="true"></script>
+    <script src="~/js/layout.js" asp-append-version="true"></script>
 
     <script>
         $(document).ready(function() {
