--- a/OnlineTutor2/Views/Account/Register.cshtml
+++ b/OnlineTutor2/Views/Account/Register.cshtml
@@ -194,6 +194,7 @@
     <partial name="_ValidationScriptsPartial" />
     <script src="~/js/registration.js" asp-append-version="true"></script>
     <script src="~/js/password-toggle.js" asp-append-version="true"></script>
+    <script src="~/js/layout.js" asp-append-version="true"></script>
 
     <script>
         $(document).ready(function() {
