--- a/OnlineTutor2/Views/Class/Details.cshtml
+++ b/OnlineTutor2/Views/Class/Details.cshtml
@@ -295,6 +295,7 @@
 </div>
 
 @section Scripts {
+    <script src="~/js/layout.js" asp-append-version="true"></script>
     <script>
         function filterTests(type) {
             const cards = document.querySelectorAll('.test-card');
