--- a/OnlineTutor2/Views/Class/Edit.cshtml
+++ b/OnlineTutor2/Views/Class/Edit.cshtml
@@ -60,4 +60,5 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script src="~/js/layout.js" asp-append-version="true"></script>
 }
