--- a/OnlineTutor2/Views/SpellingTest/Analytics.cshtml
+++ b/OnlineTutor2/Views/SpellingTest/Analytics.cshtml
@@ -416,6 +416,8 @@
 </div>
 
 @section Scripts {
+    <script src="~/js/layout.js" asp-append-version="true"></script>
+
     <script>
         function showStudentDetails(studentId, studentName) {
             // Здесь можно добавить модальное окно с детальной информацией об ученике
