--- a/OnlineTutor2/Views/SpellingTest/Delete.cshtml
+++ b/OnlineTutor2/Views/SpellingTest/Delete.cshtml
@@ -211,6 +211,8 @@
 </div>
 
 @section Scripts {
+    <script src="~/js/layout.js" asp-append-version="true"></script>
+
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const confirmationText = document.getElementById('confirmationText');
