--- a/OnlineTutor2/Views/SpellingTest/Details.cshtml
+++ b/OnlineTutor2/Views/SpellingTest/Details.cshtml
@@ -374,6 +374,8 @@
 </div>
 
 @section Scripts {
+    <script src="~/js/layout.js" asp-append-version="true"></script>
+
     <script>
         let currentQuestionId = null;
 
