--- a/OnlineTutor2/Views/SpellingTest/Edit.cshtml
+++ b/OnlineTutor2/Views/SpellingTest/Edit.cshtml
@@ -147,4 +147,5 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script src="~/js/layout.js" asp-append-version="true"></script>
 }
