--- a/OnlineTutor2/Views/SpellingTest/ImportQuestions.cshtml
+++ b/OnlineTutor2/Views/SpellingTest/ImportQuestions.cshtml
@@ -137,6 +137,7 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script src="~/js/layout.js" asp-append-version="true"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
