--- a/OnlineTutor2/Views/StudentTest/Take.cshtml
+++ b/OnlineTutor2/Views/StudentTest/Take.cshtml
@@ -226,6 +226,7 @@
 }
 
 @section Scripts {
+    <script src="~/js/layout.js" asp-append-version="true"></script>
     <script>
         let currentQuestionIndex = 0;
         let totalQuestions = @Model.TestResult.SpellingTest.Questions.Count;
