--- a/OnlineTutor2/Views/TestAnalytics/RegularTestAnalytics.cshtml
+++ b/OnlineTutor2/Views/TestAnalytics/RegularTestAnalytics.cshtml
@@ -524,6 +524,8 @@
 </div>
 
 @section Scripts {
+    <script src="~/js/layout.js" asp-append-version="true"></script>
+
     <script>
         function showStudentDetails(studentId, studentName) {
             // Здесь можно добавить модальное окно с детальной информацией об ученике
